--- a/.github/workflows/terrascan.yml
+++ b/.github/workflows/terrascan.yml
@@ -20,3 +20,8 @@ jobs:
         iac_version: 'v14'
         policy_type: 'azure'
         only_warn: true
+        sarif_upload: true
+    - name: Upload SARIF file
+    uses: github/codeql-action/upload-sarif@v1
+    with:
+      sarif_file: terrascan.sarif
