--- a/.github/workflows/terrascan.yml
+++ b/.github/workflows/terrascan.yml
@@ -19,9 +19,9 @@ jobs:
         iac_type: 'terraform'
         iac_version: 'v14'
         policy_type: 'azure'
-        only_warn: true
+        only_warn: false
         sarif_upload: true
     - name: Upload SARIF file
-    uses: github/codeql-action/upload-sarif@v1
-    with:
-      sarif_file: terrascan.sarif
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: terrascan.sarif
