--- a/.github/workflows/terrascan.yml
+++ b/.github/workflows/terrascan.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   terrascan_job:
+    permissions:
+      security-events: write
     runs-on: ubuntu-latest
     name: terrascan-action
     steps:
